# django

./: .env.sample  DRAFT.txt  READMY.md  cat_data.json  contacts_message.txt  db.json  product_data.json  pyproject.toml
DRAFT/: data.csv  draft.txt  main.py  utils.py
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_blog_data_crate_blog_publ_date.py  0003_alter_blog_preview.py  0004_alter_blog_preview.py  0005_alter_blog_preview.py  0006_rename_publ_sign_blog_is_valid.py  0007_blog_owner.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_product_image.py  0003_alter_product_date_alter_product_date_change.py  0003_category_created_at.py  0004_alter_category_options_and_more.py  0005_alter_category_category_name.py  0006_alter_product_date.py  0007_version.py  0008_alter_product_options.py  0009_product_owner_product.py  0010_product_is_published.py  0011_alter_product_is_published.py
catalog/templatetags/: test_tag.py  work_tag.py
config/: settings.py  urls.py
draft_1/: admin.py  apps.py  forms.py  models.py  tasks.py  test.py  urls.py  views.py
draft_1/migrations/: 0001_initial.py  0002_alter_settings_periodicity.py  0003_alter_settings_date_interval_and_more.py  0004_remove_settings_custom_periodicity.py  0005_client.py  0006_message.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_phone.py  0003_alter_user_is_active.py  0004_alter_user_options.py  (+3 more)
(+26 files in other folders)
